[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Kevin Lin <kevin.lin.p@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.3"

[[bin]]
name = "11"
path = "11.rs"

[[bin]]
name = "15"
path = "15.rs"
